<resources>
    <string name="app_name">Agenda</string>
    <string name="fecha">Fecha</string>
    <string name="masculino">Masculino</string>
    <string name="femenino">Femenino</string>
    <string name="guardar">Guardar</string>
    <string name="dormir">Dormir</string>
    <string name="ultimate">Ultimate</string>
    <string name="cine">Cine</string>
    <string name="correr">Correr</string>
    <string name="lugar">Ciudad nacimiento</string>
</resources>
